--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "core-js": "^3.4.4",
+    "element-ui": "^2.13.0",
+    "primeicons": "^2.0.0",
+    "primevue": "^1.0.1",
     "vue": "^2.6.10",
+    "vue-multiselect": "^2.1.6",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
